tests/cases/negative/with-type.frtl
x : float = 1.0
y : float & float = 2.0   # idempotence in constant
z : float & float = x + y
it = x + y + z